# Fintamath

./: CMakeLists.txt  README.md
.github/workflows/: ci-build.yml  coverage-sanitizers.yml  static-analyzers.yml
cmake/: CheckBuildSetup.cmake  Coverage.cmake  Doxygen.cmake  IPO.cmake  ProjectSettings.cmake  ProjectWarnings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  TargetSourcesGlob.cmake
src/: CMakeLists.txt
src/math_objects/: CMakeLists.txt
src/math_objects/include/fintamath/math_objects/: MathObjectsParser.hpp
src/math_objects/math_abstractions/: CMakeLists.txt
src/math_objects/math_abstractions/include/fintamath/math_objects/: IMathObject.hpp
src/math_objects/math_abstractions/include/fintamath/math_objects/nodes/: INode.hpp
src/math_objects/math_abstractions/include/fintamath/math_objects/nodes/terms/: ITerm.hpp
src/math_objects/math_abstractions/include/fintamath/math_objects/nodes/terms/numbers/: INumber.hpp
src/math_objects/math_abstractions/include/fintamath/math_objects/relations/: IRelation.hpp
src/math_objects/nodes/: CMakeLists.txt
src/math_objects/nodes/include/fintamath/math_objects/nodes/: NodesParser.hpp
src/math_objects/nodes/src/: NodesParser.cpp
src/math_objects/nodes/terms/: CMakeLists.txt
src/math_objects/nodes/terms/include/fintamath/math_objects/nodes/terms/: TermsParser.hpp
src/math_objects/nodes/terms/numbers/: CMakeLists.txt
src/math_objects/nodes/terms/numbers/include/fintamath/math_objects/nodes/terms/numbers/: Integer.hpp  NumbersParser.hpp  Rational.hpp
src/math_objects/nodes/terms/numbers/src/: Integer.cpp  NumbersParser.cpp  Rational.cpp
src/math_objects/nodes/terms/numbers/tests/: CMakeLists.txt  IntegerTests.cpp  RationalTests.cpp  RealTests.cpp
src/math_objects/nodes/terms/src/: TermsParser.cpp
src/math_objects/src/: MathObjectsParser.cpp
